# email-client

./: README.md  index.html  package.json  pnpm-lock.yaml
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  db.rs  gmail.rs  lib.rs  main.rs
src/components/: AccountRail.tsx  ComposeDrawer.tsx  EmailList.tsx  EmailListItem.tsx  ReadingPane.tsx  Sidebar.tsx
