[package]
name = "email-cleint"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "email_cleint_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
oauth2 = "4.4"
rusqlite = { version = "0.31", features = ["bundled"] }
keyring = "2.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "charset"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
rand = "0.8"
url = "2.5"
open = "5.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
